Agent link read-only warning +missing required fields fix + lookup field stretched + default values when creating document or folder.

--- a/app/WebContent/VAADIN/themes/constellio/constellio.scss
+++ b/app/WebContent/VAADIN/themes/constellio/constellio.scss
@@ -407,6 +407,8 @@ $popup-view-z-index: 3;
     }
 
     .lookup-autocomplete-field {
+    	width:100%;
+    	
         .v-filterselect-input {
         	padding-right: 0px;
         }
